--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <td><h1>Praveen kumar</h1>
         <p><em>Student at <strong><a href="https://www.bput.ac.in/">BPUT</a></strong> </em></p>
         <p>Computer Science Department</p>
-        <p> I'm an web developer, and ML Engineer. I like to armwrestle in my free time</p></td>
+        <p> I'm an web developer, and ML Engineer. I like to play games in my free time</p></td>
       </tr>
     </table>
 
